Fixed off-center nav alignment.

--- a/css/global.css
+++ b/css/global.css
@@ -99,6 +99,7 @@ landing page.
 nav ul {
   list-style: none;
   text-align: center;
+  padding: 0;
 }
 
 /* Change display to inline-block and add some padding */
